# altor-vec

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  npm-README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: search_bench.rs
docs/: MONOREPO_REFACTORING_PLAN.md  index.html
examples/: build_index.rs  generate_fixture.rs
scripts/: download_msmarco.py  embed.py  requirements.txt
src/: distance.rs  lib.rs
src/hnsw/: construction.rs  graph.rs  mod.rs  search.rs
tests/: edge_cases_test.rs  recall_test.rs  serialization_test.rs
wasm/: Cargo.toml  build-npm.sh
wasm/bench/: index.html
wasm/demo/: index.html  queries.json  worker.js
wasm/src/: lib.rs
wasm/test/: node_test.mjs
