[package]
name = "altor-vec-wasm"
version = "0.1.0"
edition = "2021"
description = "Client-side vector search powered by HNSW. 54KB gzipped WASM. Sub-millisecond latency."
license = "MIT"
repository = "https://github.com/altor-lab/altor-vec"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
altor-vec = { path = "..", features = ["serialization"] }
wasm-bindgen = "0.2"
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
